--- a/my_app/src/components/Header/header.css
+++ b/my_app/src/components/Header/header.css
@@ -1,15 +1,8 @@
-
-.header{
-   display: flex;
-   width: 100%;
-   justify-content: space-around;
-padding: 20px;
-color: #000;
-}
-header{
-   border: 1px solid silver;
-   background: rgb(124,124,128);
-background: linear-gradient(180deg, rgba(124,124,128,1) 0%, rgba(235,252,255,1) 100%);
-   padding: 20px;
-   color: blanchedalmond;
+header {
+  display: flex;
+  justify-content: space-around;
+  padding: 20px;
+  color: #000;
+  border: 1px solid silver;
+  background: rgb(124, 124, 128);
 }
